Docs and Unit Tests

--- a/package.json
+++ b/package.json
@@ -26,12 +26,19 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "testCoverage": "react-scripts test --coverage --watchAll false",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
       "react-app",
       "react-app/jest"
+    ]
+  },
+  "jest": {
+    "collectCoverageFrom": [
+      "src/components/displayNumber/index.tsx",
+      "src/pages/play/index.tsx"
     ]
   },
   "browserslist": {
